[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "policypilot"
version = "1.1.0"
description = "Deterministic OpenEnv benchmark for enterprise compliance review workflows."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "PolicyPilot Contributors" }]
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn>=0.30.6,<1.0.0",
  "pydantic>=2.11.0,<3.0.0",
  "openai>=2.7.2,<3.0.0",
  "openenv-core>=0.2.0",
  "pytest>=8.3.3,<9.0.0",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "server*"]
